[gd_scene load_steps=13 format=3 uid="uid://blrmp4hay8l34"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_xl83a"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="2_53fye"]
[ext_resource type="PackedScene" uid="uid://bhsy2yjledrlk" path="res://scenes/pochod/pochod.tscn" id="2_rhgoh"]
[ext_resource type="PackedScene" uid="uid://ltped2ukoxcp" path="res://scenes/interaction_area.tscn" id="2_um3cn"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="3_tcdus"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="4_1ul4n"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="5_k2a5e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wy8d7"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uhrxh"]
radius = 41.0122

[sub_resource type="RichTextEffect" id="RichTextEffect_3b4l1"]
script = ExtResource("3_tcdus")

[sub_resource type="RichTextEffect" id="RichTextEffect_lw2ll"]
script = ExtResource("4_1ul4n")

[sub_resource type="RichTextEffect" id="RichTextEffect_0c0mt"]
script = ExtResource("5_k2a5e")

[node name="npc" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 2
script = ExtResource("1_xl83a")
minigame = ExtResource("2_rhgoh")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="interaction_area" parent="." instance=ExtResource("2_um3cn")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
shape = SubResource("CircleShape2D_wy8d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uhrxh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 3
offset_left = 460.0
offset_top = 808.0
offset_right = 1460.0
offset_bottom = 1064.0
script = ExtResource("2_53fye")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_3b4l1"), SubResource("RichTextEffect_lw2ll"), SubResource("RichTextEffect_0c0mt")])

[connection signal="dialogue_signal" from="CanvasLayer/DialogueBox" to="." method="_on_dialogue_signal"]
